# MachineLearning

./: CMakeLists.txt  Classifier.cpp  Classifier.h  DataGenerator.cpp  DataGenerator.h  DataHandler.cpp  DataHandler.h  DataUpload.cpp  DataUpload.h  Histogram.cpp  Histogram.h  main.cpp
Statistics/: BetaDistribution.cpp  BetaDistribution.h
data/: Machine_Learning  gaussianExample.txt  gaussianExample1.txt  gaussianExample2.txt
